Team data update

--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -1488,6 +1488,7 @@ input[type="text"] , textarea{
         width: 100px;
         height: 100px;
         transition: all 0.3s ease;
+        border-radius: 50%;
         @media (max-width: 991px){
             width: 75px;
             height: 75px;
