--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -1489,6 +1489,7 @@ input[type="text"] , textarea{
         height: 100px;
         transition: all 0.3s ease;
         border-radius: 50%;
+        object-fit: cover;
         @media (max-width: 991px){
             width: 75px;
             height: 75px;
