Front page and team page changes

--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -1354,9 +1354,9 @@ input[type="text"] , textarea{
             width: 100%;
         }
         .why-toppeq-img{
-            position: absolute;
-            bottom: 0;
-            right: -15px;
+            // position: absolute;
+            // bottom: 0;
+            // right: -15px;
             &:before{
                 content: "";
                 position: absolute;
