Team page fixes

--- a/wp-content/themes/toppeq/scss/theme/_helpers.scss
+++ b/wp-content/themes/toppeq/scss/theme/_helpers.scss
@@ -91,3 +91,12 @@
         text-decoration: none; 
     }
 }
+
+.text-orange{
+    color: #f16624;
+    text-decoration: none;
+    &:hover{
+        color: #f16624;
+        text-decoration: none;
+    }
+}
