--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -1546,6 +1546,7 @@ input[type="text"] , textarea{
   @media (max-width: 475px){
     height: 50vh !important;
     width: 37%;
+    width: 40%;
     border: 0;
   }
 }
@@ -1573,6 +1574,9 @@ input[type="text"] , textarea{
     &.active div {
         &.icon{
             width: 200px;
+            @media (max-width: 599px){
+                width: 175px;
+            }
         }
     img{
         width: 200px;
