Front page adjustments

--- a/wp-content/themes/toppeq/scss/theme/_mainslider.scss
+++ b/wp-content/themes/toppeq/scss/theme/_mainslider.scss
@@ -352,4 +352,9 @@
       opacity: 1;
     }
   }
+  .slick-slide[aria-hidden="true"] {
+    .item-text, .item-count, picture{ 
+      visibility: hidden;
+    }
+  }
 }
