--- a/wp-content/themes/toppeq/scss/theme/_header.scss
+++ b/wp-content/themes/toppeq/scss/theme/_header.scss
@@ -162,14 +162,14 @@ body:not(.page-template-front-page-home){
         width: 35px;
         height: 5px;
         background-color: #fff;
-        margin: 6px 0;
+        margin: 5px 0;
         transition: 0.4s;
         border-radius: 4px;
     }
     .bar1{
         margin-top: 0;
         width: 47px;
-        height: 7px;
+        height: 4px;
         margin-left: auto;
         @media (max-width: 768px) {
             width: 30px;
@@ -177,18 +177,23 @@ body:not(.page-template-front-page-home){
         }
     }
     .bar2{
+        // display: none;       
+        // height: 4px;
         width: 25px;
-        height: 4px;
+        height: 1px;
         margin-left: auto; 
+        opacity: 0;
         @media (max-width: 768px) {
-            width: 14px;
-            height: 2px;
+            // width: 14px;
+            width: 30px;
+            height: 1px;
         }
     }
     .bar3{
         margin-bottom: 0;
         width: 35px;
-        height: 6px;
+        width: 47px;
+        height: 4px;
         margin-left: auto;
         @media (max-width: 768px) {
             width: 22px;
@@ -268,7 +273,8 @@ body:not(.page-template-front-page-home){
         }
 
         &-orange{
-            width: 84px;
+            // width: 84px;
+            width: 30px;
             height: 100%;
             background-color: $orange-3;
             position: absolute;
@@ -297,14 +303,14 @@ body:not(.page-template-front-page-home){
     margin-right: -9px;
     z-index: 1;
     img{
-        width: 35px;
+        width: 30px;
         @media (max-width: 767px){
             width: 18px;
         }
     }
     @media (max-width: 768px) {
         top: 40px;
-        right: 38px;
+        right: 60px;
     }
 }
 
