--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -1399,6 +1399,10 @@ input[type="text"] , textarea{
                     left: 20px;
                 }
             }
+            @media (min-width: 992px) {
+                position: relative;
+                top: 50px;
+            }
             @media (max-width: 991px){
                 position: relative;
                 margin-top: 39px;
