--- a/wp-content/themes/toppeq/scss/theme/_mainslider.scss
+++ b/wp-content/themes/toppeq/scss/theme/_mainslider.scss
@@ -104,6 +104,18 @@
       @media (max-width: 767px) {
         bottom: 65%;
       }
+      b{
+        @media (max-width: 1600px) {
+          max-width: 630px;
+          bottom: 65%;
+        }
+        h1{
+          @media (max-width: 1600px) {
+            margin-bottom: 45px;
+            font-size: 35px;
+          }
+        }
+      }
     }
     &-count{
       position: absolute;
