--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -2364,3 +2364,8 @@ input[type="text"] , textarea{
         margin-bottom: 35px;
     }
 }
+.due-diligence{
+    @media(min-width: 767px){
+        margin-top: -100px;
+    }
+}
