--- a/wp-content/themes/toppeq/scss/theme/_mainslider.scss
+++ b/wp-content/themes/toppeq/scss/theme/_mainslider.scss
@@ -106,6 +106,23 @@
       }
       
     }
+    &.a{
+      h1{
+        position: relative;
+        &:after{
+          content: '';
+          position: absolute;
+          bottom: -20px;
+          left: 0;
+          height: 2px;
+          width: 30%;
+          background: white
+        }
+        @media (max-width: 1600px) {
+            font-size: 35px;
+          }
+      }
+    }
     &.b{
       .item-text{
         @media (max-width: 1600px) {
@@ -197,7 +214,7 @@
       .item-text{
         h1{
           @media (min-width: 1200px) {
-            text-align: right;
+            // text-align: right;
           }
         }
       }
