--- a/wp-content/themes/toppeq/scss/theme/_mainslider.scss
+++ b/wp-content/themes/toppeq/scss/theme/_mainslider.scss
@@ -7,7 +7,7 @@
     picture{
       display: block;
       position: relative;
-      bottom: 75px;
+      bottom: 50px;
     }
     img{
       margin: auto;
@@ -23,7 +23,7 @@
         max-width: 80vw;
       }
       @media (min-width: 399px) and (max-width: 767px) {
-        height: 64vh;
+        max-height: 64vh;
       }
       @media only screen 
       and (min-device-width : 320px) 
@@ -89,7 +89,7 @@
       @media (max-width: 1600px) {
         max-width: 450px;
         // bottom: 55%;
-        top: 25vh;
+        top: 180px;
         bottom: initial;
         bottom: auto;
       }
@@ -119,12 +119,17 @@
           bottom: -20px;
           left: 0;
           height: 2px;
-          width: 30%;
+          width: 55%;
           background: white
         }
         @media (max-width: 1600px) {
-            font-size: 35px;
+            // font-size: 35px;
           }
+      }
+      @media(max-width: 1600px) and (min-width: 1201px){
+        img{
+          max-height: 60vh;
+        }
       }
     }
     &.b{
@@ -142,7 +147,7 @@
             bottom: -20px;
             left: 0;
             height: 2px;
-            width: 30%;
+            width: 33%;
             background: white;
           }
           @media (max-width: 1600px) {
@@ -199,18 +204,41 @@
     &.a{
       img{
         @media (max-width: 380px) and ( max-height: 699px ) {
-          max-height: 300px;
+          max-height: 65vh;
         }
       }
       .item-text{
         @media (max-width: 767px) {
           bottom: 65%;
         }
-        @media (width: 320px) and ( height: 568px ) {
-          bottom: 58%;
+        @media (max-width: 320px){
+          // bottom: 58%;
+          bottom: auto;
+          bottom: initial;
+          top: 80px;
         }
-        @media (width: 375px) and ( height: 667px ) {
-          bottom: 56%;
+        @media (max-width: 415px) {
+          // bottom: 56%;
+          bottom: auto;
+          bottom: initial;
+          top: 120px;
+        }
+      }
+    }
+    &.b{
+      justify-content: center !important;
+      img{
+        margin-bottom: -100px;
+      }
+      .item-text{
+        
+        @media (max-width: 767px) {
+          bottom: initial;
+          top: 160px;
+        }
+        @media (max-width: 360px) {
+          bottom: initial;
+          top: 110px;
         }
       }
     }
@@ -238,7 +266,7 @@
 
 .slick-dots {
   position: absolute;
-  bottom: 30px;
+  bottom: 15px;
   width: 100%;
   margin: 0;
   padding: 0;
