--- a/wp-content/themes/toppeq/scss/theme/_header.scss
+++ b/wp-content/themes/toppeq/scss/theme/_header.scss
@@ -323,7 +323,7 @@ body:not(.page-template-front-page-home){
 
 
 .header-bg , .header-bg-post{
-    // background: url('../images/slider-img.png') no-repeat;
+    background: url('../images/slider-img.png') no-repeat;
     padding: 25px 65px;
     background-size: cover;
     width: 100%;
