--- a/wp-content/themes/toppeq/scss/theme/_header.scss
+++ b/wp-content/themes/toppeq/scss/theme/_header.scss
@@ -228,12 +228,13 @@ body:not(.page-template-front-page-home){
     height: 100%;
     width: 100%;
     background: white;
-    z-index: 11;
+    z-index: -1;
     backface-visibility: hidden;
     overflow: auto;
-    transform: translateY(-100%);
-    transition-property: transform;
-    transition-duration: .4s;
+    // transform: translateY(-100%);
+    transition-property: opacity;
+    transition-duration: .3s;
+    opacity: 0;
     ul.navbar-nav {
         li{
             a{
@@ -256,6 +257,8 @@ body:not(.page-template-front-page-home){
     }
     &.visible{
         transform: translateY(0);
+        opacity: 1;
+        z-index: 11;
     }
     
     .rectangle{
@@ -287,7 +290,7 @@ body:not(.page-template-front-page-home){
         }
     }
     .menu-items{
-        padding: 50px 85px;
+        padding: 25px 80px;
         @media (max-width: 768px) {
             padding: 44px 25px;
         }
