--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -988,6 +988,11 @@ hr.line-separator{
         box-shadow: 0 2px 40px 0 rgba(235, 235, 235, 0.5);
         background-color: white;
         position: relative;
+        @media(min-width: 787px){
+            p{
+                font-size: 22px;
+            }
+        }
         .services-block{
             position: relative;
             width: 100%;
@@ -1017,6 +1022,7 @@ hr.line-separator{
                     position: relative;
                      h2{
                         position: relative;
+                        font-size: 40px;
                         &:after{
                             content:'';
                             position: absolute;
