rotating img issue fix

--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -1514,8 +1514,7 @@ input[type="text"] , textarea{
             height: 45px;
         }
     }
-
-    &.active{
+    &.first{
         & + .block{
             img{
                 transform: rotate(-30deg);
@@ -1680,232 +1679,6 @@ input[type="text"] , textarea{
     }
   }
 
-  .count2 li:nth-child(2) {
-    transform: rotate(180deg);
-  }
-
-  .count3 li {
-    &:nth-child(2) {
-      transform: rotate(120deg);
-    }
-    &:nth-child(3) {
-      transform: rotate(240deg);
-    }
-  }
-
-  .count4 li {
-    &:nth-child(2) {
-      transform: rotate(90deg);
-    }
-    &:nth-child(3) {
-      transform: rotate(180deg);
-    }
-    &:nth-child(4) {
-      transform: rotate(270deg);
-    }
-  }
-
-  .count5 li {
-    &:nth-child(2) {
-      transform: rotate(72deg);
-    }
-    &:nth-child(3) {
-      transform: rotate(144deg);
-    }
-    &:nth-child(4) {
-      transform: rotate(216deg);
-    }
-    &:nth-child(5) {
-      transform: rotate(-72deg);
-    }
-  }
-
-  .count6 li {
-    &:nth-child(2) {
-      transform: rotate(60deg);
-    }
-    &:nth-child(3) {
-      transform: rotate(120deg);
-    }
-    &:nth-child(4) {
-      transform: rotate(180deg);
-    }
-    &:nth-child(5) {
-      transform: rotate(240deg);
-    }
-    &:nth-child(6) {
-      transform: rotate(-60deg);
-    }
-  }
-
-  .count7 li {
-    &:nth-child(2) {
-      transform: rotate(51.5deg);
-    }
-    &:nth-child(3) {
-      transform: rotate(103deg);
-    }
-    &:nth-child(4) {
-      transform: rotate(154.5deg);
-    }
-    &:nth-child(5) {
-      transform: rotate(206deg);
-    }
-    &:nth-child(6) {
-      transform: rotate(-103deg);
-    }
-    &:nth-child(7) {
-      transform: rotate(-51.5deg);
-    }
-  }
-
-  .count8 li {
-    &:nth-child(2) {
-      transform: rotate(45deg);
-    }
-    &:nth-child(3) {
-      transform: rotate(90deg);
-    }
-    &:nth-child(4) {
-      transform: rotate(135deg);
-    }
-    &:nth-child(5) {
-      transform: rotate(180deg);
-    }
-    &:nth-child(6) {
-      transform: rotate(-135deg);
-    }
-    &:nth-child(7) {
-      transform: rotate(-90deg);
-    }
-    &:nth-child(8) {
-      transform: rotate(-45deg);
-    }
-  }
-
-  .count9 li {
-    &:nth-child(2) {
-      transform: rotate(40deg);
-    }
-    &:nth-child(3) {
-      transform: rotate(80deg);
-    }
-    &:nth-child(4) {
-      transform: rotate(120deg);
-    }
-    &:nth-child(5) {
-      transform: rotate(160deg);
-    }
-    &:nth-child(6) {
-      transform: rotate(-160deg);
-    }
-    &:nth-child(7) {
-      transform: rotate(-120deg);
-    }
-    &:nth-child(8) {
-      transform: rotate(-80deg);
-    }
-    &:nth-child(9) {
-      transform: rotate(-40deg);
-    }
-  }
-
-  .count10 li {
-    &:nth-child(2) {
-      transform: rotate(36deg);
-    }
-    &:nth-child(3) {
-      transform: rotate(72deg);
-    }
-    &:nth-child(4) {
-      transform: rotate(108deg);
-    }
-    &:nth-child(5) {
-      transform: rotate(144deg);
-    }
-    &:nth-child(6) {
-      transform: rotate(-180deg);
-    }
-    &:nth-child(7) {
-      transform: rotate(-144deg);
-    }
-    &:nth-child(8) {
-      transform: rotate(-108deg);
-    }
-    &:nth-child(9) {
-      transform: rotate(-72deg);
-    }
-    &:nth-child(10) {
-      transform: rotate(-36deg);
-    }
-  }
-  .count11 li {
-    &:nth-child(2) {
-      transform: rotate(40deg);
-    }
-    &:nth-child(3) {
-      transform: rotate(65deg);
-    }
-    &:nth-child(4) {
-      transform: rotate(96deg);
-    }
-    &:nth-child(5) {
-      transform: rotate(128deg);
-    }
-    &:nth-child(6) {
-      transform: rotate(-200deg);
-    }
-    &:nth-child(7) {
-      transform: rotate(-168deg);
-    }
-    &:nth-child(8) {
-      transform: rotate(-128deg);
-    }
-    &:nth-child(9) {
-      transform: rotate(-96deg);
-    }
-    &:nth-child(10) {
-      transform: rotate(-65deg);
-    }
-    &:nth-child(11) {
-      transform: rotate(-40deg);
-    }
-  }
-  .count12 li {
-    &:nth-child(2) {
-      transform: rotate(34deg);
-    }
-    &:nth-child(3) {
-      transform: rotate(60deg);
-    }
-    &:nth-child(4) {
-      transform: rotate(88deg);
-    }
-    &:nth-child(5) {
-      transform: rotate(115deg);
-    }
-    &:nth-child(6) {
-      transform: rotate(-215deg);
-    }
-    &:nth-child(7) {
-      transform: rotate(-185deg);
-    }
-    &:nth-child(8) {
-      transform: rotate(-153deg);
-    }
-    &:nth-child(9) {
-      transform: rotate(-122deg);
-    }
-    &:nth-child(10) {
-      transform: rotate(-93deg);
-    }
-    &:nth-child(11) {
-      transform: rotate(-61deg);
-    }
-    &:nth-child(12) {
-      transform: rotate(-34deg);
-    }
-  }
 
  .count13 li {
     &:nth-child(2) {
