--- a/wp-content/themes/toppeq/style.css
+++ b/wp-content/themes/toppeq/style.css
@@ -1,7 +1,7 @@
 /*!
 Theme Name: Toppeq
-Author: 
-Author URI: 
+Author: Ajency.in
+Author URI: https://ajency.in/
 Description:  
 Version: 1.0
 Text Domain: toppeq
