--- a/wp-content/themes/toppeq/scss/theme/_form.scss
+++ b/wp-content/themes/toppeq/scss/theme/_form.scss
@@ -284,3 +284,11 @@ textarea {
         margin-bottom: 50px;
     }
 }
+@media (max-width: 475px){
+    .frm-g-recaptcha {
+        transform: scale(0.77);
+        -webkit-transform: scale(0.77);
+        transform-origin: 0 0;
+        -webkit-transform-origin: 0 0;
+    }
+}
