--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -805,7 +805,7 @@ hr.line-separator{
             background-color: white;
             padding: 1.5rem;
             margin: 0 15px;
-            input[type="text"] , input[type="email"], input[type="number"], textarea{
+            input[type="text"] , input[type="email"], input[type="number"], input[type="tel"], textarea{
                 border-bottom: solid 1px $gray-500 !important;
                 box-shadow: none;
                 border: 0;
