added css /js  for email field to be visible by defualt

--- a/wp-content/themes/toppeq/css/theme-styles.css
+++ b/wp-content/themes/toppeq/css/theme-styles.css
@@ -9761,6 +9761,10 @@ textarea {
     transform-origin: 0 0;
     -webkit-transform-origin: 0 0; } }
 
+/* line 296, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_form.scss */
+.default-email-field.show-email-field {
+  display: block !important; }
+
 /* line 1, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
 .section-wrapper {
   margin-bottom: 50px; }
