--- a/wp-content/themes/toppeq/scss/theme/_form.scss
+++ b/wp-content/themes/toppeq/scss/theme/_form.scss
@@ -292,3 +292,8 @@ textarea {
         -webkit-transform-origin: 0 0;
     }
 }
+.default-email-field{
+    &.show-email-field{
+        display: block !important;
+    }
+}
