--- a/wp-content/themes/toppeq/css/theme-styles.css
+++ b/wp-content/themes/toppeq/css/theme-styles.css
@@ -9763,7 +9763,7 @@ textarea {
 
 /* line 296, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_form.scss */
 .default-email-field.show-email-field {
-  display: block !important; }
+  display: block; }
 
 /* line 1, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
 .section-wrapper {
