--- a/wp-content/themes/toppeq/scss/theme/_form.scss
+++ b/wp-content/themes/toppeq/scss/theme/_form.scss
@@ -294,6 +294,6 @@ textarea {
 }
 .default-email-field{
     &.show-email-field{
-        display: block !important;
+        display: block;
     }
 }
