--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -854,7 +854,7 @@ hr.line-separator{
             z-index: -1
         }
         @media (max-width: 767px){
-            margin: 0 40px;
+            margin: -3rem 40px 0;
         }
     }
 }
