--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -842,6 +842,9 @@ hr.line-separator{
                     text-align: left;
                 }
             }
+            @media (max-width: 767px){
+                margin: 0 0;
+            }
         }
         .rectangle{
             background: #f16624;
