--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -1304,7 +1304,7 @@ input[type="text"] , textarea{
         box-shadow: 0 2px 40px 0 rgba(235, 235, 235, 0.5);
         background-color: white;
         position: relative;
-        padding: 0px 0 50px 30px;
+        padding: 0px 0 35px 30px;
         .sub-title{
             color: $gray-700;
             text-align: center;
@@ -1409,12 +1409,14 @@ input[type="text"] , textarea{
             @media (min-width: 992px) {
                 position: relative;
                 top: 50px;
+                left: 15px;
             }
             @media (max-width: 991px){
                 position: relative;
                 margin-top: 39px;
                 padding-right: 15px;
-                right: 0;
+                right: -10px;
+                top: 10px;
             }
             @media (max-width: 425px){
                 padding-left: 40px;
