removed dashed lines and updated due due deligence image

--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -1364,7 +1364,7 @@ input[type="text"] , textarea{
             // position: absolute;
             // bottom: 0;
             // right: -15px;
-            &:before{
+/*            &:before{
                 content: "";
                 position: absolute;
                 width: 200px;
@@ -1405,7 +1405,7 @@ input[type="text"] , textarea{
                     top: -18px;
                     left: 20px;
                 }
-            }
+            }*/
             @media (min-width: 992px) {
                 position: relative;
                 top: 50px;
