--- a/wp-content/themes/toppeq/css/theme-styles.css
+++ b/wp-content/themes/toppeq/css/theme-styles.css
@@ -9151,7 +9151,7 @@ input[type="text"], textarea {
       transform: rotate3d(0, 0, 0, 0deg) scale(0.85);
       transition: .55s ease-in-out;
       width: 100%;
-      height: 100%;
+      height: 0%;
       opacity: 0;
       background-size: cover; }
   .circle--slider .animate-more {
@@ -9181,6 +9181,12 @@ input[type="text"], textarea {
   .circle--slider .animate.active .animate-img .animate-img__in {
     opacity: 1;
     transform: scale(1); }
+  .circle--slider a.linkedin-link img {
+    margin-bottom: 5px; }
+    @media (max-width: 575px) {
+      .circle--slider a.linkedin-link img {
+        width: 12px;
+        height: 12px; } }
 
 .team .team-image {
   padding: 0 30px; }
