--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -1413,10 +1413,13 @@ input[type="text"] , textarea{
             }
             @media (max-width: 991px){
                 position: relative;
-                margin-top: 39px;
+                margin: 30px 0;
                 padding-right: 15px;
                 right: 0px;
                 top: 10px;
+            }
+            @media (max-width: 767px){
+                margin: 20px 0 30px;
             }
             @media (max-width: 425px){
                 padding-left: 40px;
